--- a/practice-app/templates/eq_post.html
+++ b/practice-app/templates/eq_post.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Post equipment</h2>
-<form id="eq_post" method="POST" class="post-group" validate action="">
+<form id="eq_post" method="POST" class="form-group" validate action="">
   {{ post }}
   <button type='submit'>Submit</button>
 
