Added my API name and its url to apiOverview method, made the input driver name required

--- a/practice-app/templates/formula1_standings.html
+++ b/practice-app/templates/formula1_standings.html
@@ -33,7 +33,7 @@
         
         {% csrf_token %}
 
-        Enter the name of the driver you want to search: <input type="text" name="driver_name"><br>
+        Enter the name of the driver you want to search: <input type="text" name="driver_name" required><br>
         <button type="submit">Search</button>
 
     </form>
