--- a/practice-app/templates/index.html
+++ b/practice-app/templates/index.html
@@ -68,9 +68,33 @@ h2{
 
 </script>
 -->
-<div style="width: 100%; height: 80px; background: cyan;position: fixed; z-index: 1;">
-    <h1 id="title" style="font-size:2.5em ;  margin-left: 15%; color: rgb(0, 0, 46); position: relative; top: -20px; ">2021SpringGroup4-DjangoAPI</h1>
- </div>
+
+<nav class="navbar navbar-inverse" style="position: fixed; width: 100%; z-index: 1; opacity: 0.9; ">
+  <div class="container-fluid" style="background:;">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">2021SpringGroup4-DjangoAPI</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">All Projects <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+         <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+          <li><a href="#">   <p>Project Name - Name Surname </p></a></li>
+
+        </ul>
+      </li>
+  
+
+    </ul>
+  </div>
+</nav>
+
  <div style="height: 80px; width: 100%;"></div>
         <div class="container" style="">
           <div class="row">
@@ -89,103 +113,108 @@ h2{
                
               </ol>
             </nav>
-            <div class="col-sm-8"   style="float: right; ">
-              
-                <div class="pro" id="section1">    
-                    <h1>1.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+          
+         
+<div class="col-sm-8"   style="float: right; ">
+ 
+  <div class="pro" id="section1">    
+      <h1>1.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section2">    
+      <h1>2.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section3">    
+      <h1>3.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section4">    
+      <h1>4.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section5">    
+      <h1>5.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section6">    
+      <h1>6.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section7">    
+      <h1>7.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section8">    
+      <h1>8.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
+  <div class="pro" id="section9">    
+      <h1>9.Project Name - Name Surname</h1>
+      <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
+
+      <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
+      Description Description Description Description Description Description Description Description Description Description Description 
+                     <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
+
+  </p>
+  </div>
   
-                </p>
-                </div>
-                <div class="pro" id="section2">    
-                    <h1>2.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section3">    
-                    <h1>3.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section4">    
-                    <h1>4.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section5">    
-                    <h1>5.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section6">    
-                    <h1>6.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section7">    
-                    <h1>7.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section8">    
-                    <h1>8.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
-                <div class="pro" id="section9">    
-                    <h1>9.Project Name - Name Surname</h1>
-                    <img id="img" src="img.jpg" style="width: 200px; height: 150px; float :right; margin: 0px 0px 15px 15px;">
-    
-                    <p>Description Description Description Description Description Description Description Description Description Description Description Description Description Description Description 
-                    Description Description Description Description Description Description Description Description Description Description Description 
-                                   <a href="projectx.html"> <button type="button" class="btn btn-success" style="margin: 20px 15px 0px 0px; float: right;" >View Project</button></a>
-  
-                </p>
-                </div>
+         
+
+</div>
                 
                        
              
             </div>
-          </div>
         </div>
         <script>
       
