--- a/practice-app/templates/search_user.html
+++ b/practice-app/templates/search_user.html
@@ -1,3 +1,4 @@
+{% block body %}
 <body>
     <h1>Search User</h1>
     <form id="registerForm" method="POST" class="form-group" validate action="">
@@ -5,3 +6,4 @@
         <button type='submit'>Search</button>
     </form>
  </body>
+ {% endblock %}
