Created an initial homepage. Some problems still exist.

--- a/practice-app/templates/formula1_standings.html
+++ b/practice-app/templates/formula1_standings.html
@@ -29,7 +29,7 @@
         {% endfor %}
     </table>
     <br/><br/>
-    <form action="/api/formula1/driver_info/" method="post">
+    <form action="/formula1/driver_info/" method="post">
         
         {% csrf_token %}
 
