html files are updated, frontend is done

--- a/practice-app/templates/main.html
+++ b/practice-app/templates/main.html
@@ -6,21 +6,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Group4 Homepage</title>
     <link rel="stylesheet" href="{% static 'button.css' %}">
 </head>
 
+
+<div class="header">
+  <a href="#default" class="logo">MyApp</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+
+    <a href="http://localhost:8000/register/">Register</a>
+     <a href="http://localhost:8000/search_user/">Search User</a>
+       <a href="http://localhost:8000/eq_post/">Equipment Post</a>
+
+
+      <a href="http://localhost:8000/event_post/">Event Post</a>
+      <a href="http://localhost:8000/places/">Places API</a>
+      <a href="http://localhost:8000/covid19/"> Covid19 API</a>
+
+
+     <a href="http://localhost:8000/random_article/">Random Article </a>
+      <a href="http://localhost:8000/holidays/ ">Holidays API </a>
+      <a href="http://localhost:8000/formula1/">Formula1 API</a>
+
+
+      <a href="http://localhost:8000/team/">NBA Team API </a>
+      <a href="http://localhost:8000/hava/">Hava API</a>
+  </div>
+</div>
+
 <body>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/register/">Register API</a></div>
+    <div class="button_cont" ><a class="button" href="http://localhost:8000//register/">Register API</a></div>
     <div class="button_cont" ><a class="button" href="http://localhost:8000/search_user/">Search User API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/random_article/">Random Article API</a></div>
     <div class="button_cont" ><a class="button" href="http://localhost:8000/eq_post/">Create Equipment Post API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/covid19/">Covid19 Case Reports API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/formula1/">Formula1 API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/team/">NBA Team Info API</a></div>
+
     <div class="button_cont" ><a class="button" href="http://localhost:8000/event_post/">Create Event Post API</a></div>
+    <div class="button_cont" ><a class="button" href="http://localhost:8000/places/">Find Places API</a></div>
+    <div class="button_cont" ><a class="button" href="http://localhost:8000/covid19/">Covid19 Case Reports API</a></div>
+
+
+    <div class="button_cont" ><a class="button" href="http://localhost:8000/random_article/">Random Article API</a></div>
     <div class="button_cont" ><a class="button" href="http://localhost:8000/holidays/">Holidays API</a></div>
+    <div class="button_cont" ><a class="button" href="http://localhost:8000/formula1/">Formula1 API</a></div>
+
+    <div class="button_cont" ><a class="button" href="http://localhost:8000/team/">NBA Team Info API</a></div>
     <div class="button_cont" ><a class="button" href="http://localhost:8000/hava/">Hava API</a></div>
 </body>
+
+
+
+
+
+
+
+
+<div class="footer">
+   <h4> Our Github Repo : <a href="https://github.com/bounswe/2021SpringGroup4"> 2021SpringGroup4 </a>   </h4>
+<p>
+      Our Team Members :
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Salih-Furkan-Akkurt"> Salih Furkan Akkurt </a>  ,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Ece-Dilara-Aslan"> Ece Dilara Aslan </a> ,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/%C4%B0hsan-Mert-Atalay"> İhsan Mert Atalay </a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Muhammed İrfan Bozkurt</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Mehmet Hilmi Dündar</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Berkay Gümüş</a>,
+       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Tolga Kerimoğlu</a>,
+       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yiğit Sarıoğlu </a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yağmur Selek </a>
+
+
+  </p>
+</div>
+
 
 </html>
