--- a/practice-app/templates/hava.html
+++ b/practice-app/templates/hava.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+    <title>Group4 Homepage</title>
+    <link rel="stylesheet" href="{% static 'button.css' %}">
 </head>
+
+
+<div class="header">
+  <a href="#default" class="logo">PracticeApp-Group4</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+
+    <a href="{% url 'register' %}">Register</a>
+     <a href="{% url 'search_user' %}">Search User</a>
+       <a href="{% url 'eq_post' %}">Equipment Post</a>
+
+
+      <a href="{% url 'event_post' %}">Event Post</a>
+      <a href="{% url 'places' %}">Places API</a>
+      <a href="{% url 'covid19' %}"> Covid19 API</a>
+
+
+     <a href="{% url 'random_article' %}">Random Article </a>
+      <a href="{% url 'holidays' %}">Holidays API </a>
+      <a href="{% url 'formula1' %}">Formula1 API</a>
+
+
+      <a href="{% url 'select_team' %}">NBA Team API </a>
+      <a href="{% url 'hava' %}">Hava API</a>
+  </div>
+</div>
 
 <body>
     <section class="hero is-primary">
