--- a/practice-app/templates/main.html
+++ b/practice-app/templates/main.html
@@ -12,46 +12,46 @@
 
 
 <div class="header">
-  <a href="#default" class="logo">MyApp</a>
+  <a href="#default" class="logo">PracticeApp-Group4</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
 
-    <a href="http://localhost:8000/register/">Register</a>
-     <a href="http://localhost:8000/search_user/">Search User</a>
-       <a href="http://localhost:8000/eq_post/">Equipment Post</a>
+    <a href="{% url 'register' %}">Register</a>
+     <a href="{% url 'search_user' %}">Search User</a>
+       <a href="{% url 'eq_post' %}">Equipment Post</a>
 
 
-      <a href="http://localhost:8000/event_post/">Event Post</a>
-      <a href="http://localhost:8000/places/">Places API</a>
-      <a href="http://localhost:8000/covid19/"> Covid19 API</a>
+      <a href="{% url 'event_post' %}">Event Post</a>
+      <a href="{% url 'places' %}">Places API</a>
+      <a href="{% url 'covid19' %}"> Covid19 API</a>
 
 
-     <a href="http://localhost:8000/random_article/">Random Article </a>
-      <a href="http://localhost:8000/holidays/ ">Holidays API </a>
-      <a href="http://localhost:8000/formula1/">Formula1 API</a>
+     <a href="{% url 'random_article' %}">Random Article </a>
+      <a href="{% url 'holidays' %}">Holidays API </a>
+      <a href="{% url 'formula1' %}">Formula1 API</a>
 
 
-      <a href="http://localhost:8000/team/">NBA Team API </a>
-      <a href="http://localhost:8000/hava/">Hava API</a>
+      <a href="{% url 'select_team' %}">NBA Team API </a>
+      <a href="{% url 'hava' %}">Hava API</a>
   </div>
 </div>
 
 <body>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000//register/">Register API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/search_user/">Search User API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/eq_post/">Create Equipment Post API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'register' %}">Register API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'search_user' %}">Search User API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'eq_post' %}">Create Equipment Post API</a></div>
 
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/event_post/">Create Event Post API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/places/">Find Places API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/covid19/">Covid19 Case Reports API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'event_post' %}">Create Event Post API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'places' %}">Find Places API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'covid19' %}">Covid19 Case Reports API</a></div>
 
 
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/random_article/">Random Article API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/holidays/">Holidays API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/formula1/">Formula1 API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'random_article' %}">Random Article API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'holidays' %}">Holidays API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'formula1' %}">Formula1 API</a></div>
 
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/team/">NBA Team Info API</a></div>
-    <div class="button_cont" ><a class="button" href="http://localhost:8000/hava/">Hava API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'select_team' %}">NBA Team Info API</a></div>
+    <div class="button_cont" ><a class="button" href="{% url 'hava' %}">Hava API</a></div>
 </body>
 
 
