--- a/practice-app/templates/driver_information.html
+++ b/practice-app/templates/driver_information.html
@@ -41,11 +41,11 @@
 <body style="text-align:center">
     {% if redirect or search_key == "" %}
         <h1>You haven't searched for any driver!</h1>
-        <h2>Please <a href="/api/formula1/">go back</a> and search for a driver</h2>
+        <h2>Please <a href="{% url 'formula1' %}">go back</a> and search for a driver</h2>
     {% else %}
         {% if no_result %}
             <h1>There is no driver with name {{search_key}}!</h1>
-            <h2>Please <a href="/api/formula1/">go back</a> and search for another driver</h2>
+            <h2>Please <a href="{% url 'formula1' %}">go back</a> and search for another driver</h2>
         {% else %}
             <h1>You have searched for {{search_key}}</h1>
             <table style="width:50%; text-align:center; border:1px solid; margin-left:auto; margin-right:auto">
