--- a/practice-app/templates/register.html
+++ b/practice-app/templates/register.html
@@ -14,9 +14,9 @@
 <div class="header">
   <a href="#default" class="logo">PracticeApp-Group4</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
+    <a href="{% url 'api-overview' %}">Home</a>
 
-    <a href="{% url 'register' %}">Register</a>
+    <a class="active" href="{% url 'register' %}">Register</a>
      <a href="{% url 'search_user' %}">Search User</a>
        <a href="{% url 'eq_post' %}">Equipment Post</a>
 
@@ -50,23 +50,21 @@
 
 
 
-
 <div class="footer">
-   <h4> Our Github Repo : <a href="https://github.com/bounswe/2021SpringGroup4"> 2021SpringGroup4 </a>   </h4>
+  <h4> Our Github Repo : <a href="https://github.com/bounswe/2021SpringGroup4"> 2021SpringGroup4 </a>   </h4>
 <p>
-      Our Team Members :
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Salih-Furkan-Akkurt"> Salih Furkan Akkurt </a>  ,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Ece-Dilara-Aslan"> Ece Dilara Aslan </a> ,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/%C4%B0hsan-Mert-Atalay"> İhsan Mert Atalay </a>,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Muhammed İrfan Bozkurt</a>,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Mehmet Hilmi Dündar</a>,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Berkay Gümüş</a>,
-       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Tolga Kerimoğlu</a>,
-       <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yiğit Sarıoğlu </a>,
-      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Yağmur Selek </a>
+     Team Members :
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Salih-Furkan-Akkurt"> Salih Furkan Akkurt </a>  ,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Ece-Dilara-Aslan"> Ece Dilara Aslan </a> ,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/%C4%B0hsan-Mert-Atalay"> İhsan Mert Atalay </a>,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Muhammed-Irfan-Bozkurt"> Muhammed İrfan Bozkurt</a>,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Mehmet-Hilmi-D%C3%BCndar"> Mehmet Hilmi Dündar</a>,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Berkay-G%C3%BCm%C3%BC%C5%9F"> Berkay Gümüş</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Tolga-Kerimo%C4%9Flu"> Tolga Kerimoğlu</a>,
+      <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Yi%C4%9Fit-Sar%C4%B1o%C4%9Flu"> Yiğit Sarıoğlu </a>,
+     <a href="https://github.com/bounswe/2021SpringGroup4/wiki/Ya%C4%9Fmur-Selek"> Yağmur Selek </a>
 
 
-  </p>
+ </p>
 </div>
-
 </html>
