--- a/code/frontend/src/index.css
+++ b/code/frontend/src/index.css
@@ -1,34 +1,13 @@
-.{
+body {
   margin: 0;
-  padding:0;
-  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-body{
-  min-height: 100vh;
-  font-family: 'Poppins', sans-serif;
-}
-
-nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 10vh;
-  width: 90%;
-  margin: auto;
-  
-}
-
-ul{
-  display: flex;
-  width: 50%;
-  justify-content: space-between;
-  list-style: none;
-
-}
-
-h1{
-
-  letter-spacing: 3px;
-
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
