--- a/code/frontend/src/App.css
+++ b/code/frontend/src/App.css
@@ -1,4 +1,4 @@
-body{
+/*body{
   background-color: #282c34;
 }
 
@@ -21,4 +21,48 @@ body{
     font-size: 18px;
     font-weight: 900px;
     box-shadow: 0px -1px 10px -4px rgba(0,0,0,0.75);
-  }
+  } */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+}
+
+.home,
+.services,
+.products,
+.sign-up {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+.services {
+  background-image: url("/img-2.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.products {
+  background-image: url("/img-1.jpeg");
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.sign-up {
+  background-image: url("/img-8.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
